# GLS

./: .gitignore
GLS_Project/: CMakeLists.txt
docs/: BUILD_STATUS.md  CHANGELOG.md  GOODLUCK_UI_GUIDE.md  HARDENING_PLAN.md  LESSONS_PHASE1.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md
docs/plugins/: AEV.AmbienceEvolverSuite.md  AEV.GuerillaVerb.md  DYN.BusLift.md  DYN.ClipForge.md  DYN.MultiBandMaster.md  DYN.PunchGate.md  DYN.RMSRider.md  DYN.SideForge.md  DYN.SmoothDestroyer.md  DYN.TransFix.md  DYN.VocalPin.md  DYN.VocalPresenceComp.md  EQ.AirGlass.md  EQ.BusPaint.md  EQ.DynBand.md  EQ.DynamicTiltPro.md  EQ.FormSet.md  EQ.GuitarBodyEQ.md  EQ.HarmonicEQ.md  EQ.LowBender.md  EQ.MixNotchLab.md  EQ.TiltLine.md  GLS.BusGlue.md  GLS.ChannelPilot.md  GLS.ChannelStripOne.md  GLS.MonoizePro.md  GLS.ParallelPress.md  GLS.StemBalancer.md  GLS.SubCommand.md  GLS.XOverBus.md  GRD.BassMaul.md  GRD.BitSpear.md  GRD.BiteShaper.md  GRD.FaultLineFuzz.md  GRD.IronBus.md  GRD.MixHeat.md  GRD.OctaneClipper.md  GRD.StereoGrind.md  GRD.SubHarmForge.md  GRD.TapeCrush.md  (+29 more)
scripts/: build_all_debug.sh  collect_vst3.sh  validate_vst3.sh
src/: DualPrecisionAudioProcessor.h
src/AEV/AmbienceEvolverSuite/: AEVAmbienceEvolverSuiteAudioProcessor.cpp  AEVAmbienceEvolverSuiteAudioProcessor.h  CMakeLists.txt
src/AEV/GuerillaVerb/: AEVGuerillaVerbAudioProcessor.cpp  AEVGuerillaVerbAudioProcessor.h  CMakeLists.txt
src/DYN/BusLift/: CMakeLists.txt  DYNBusLiftAudioProcessor.cpp  DYNBusLiftAudioProcessor.h
src/DYN/ClipForge/: CMakeLists.txt  DYNClipForgeAudioProcessor.cpp  DYNClipForgeAudioProcessor.h
src/DYN/MultiBandMaster/: CMakeLists.txt  DYNMultiBandMasterAudioProcessor.cpp  DYNMultiBandMasterAudioProcessor.h
src/DYN/PunchGate/: CMakeLists.txt  DYNPunchGateAudioProcessor.cpp  DYNPunchGateAudioProcessor.h
src/DYN/RMSRider/: CMakeLists.txt  DYNRMSRiderAudioProcessor.cpp  DYNRMSRiderAudioProcessor.h
src/DYN/SideForge/: CMakeLists.txt  DYNSideForgeAudioProcessor.cpp  DYNSideForgeAudioProcessor.h
src/DYN/SmoothDestroyer/: CMakeLists.txt  DYNSmoothDestroyerAudioProcessor.cpp  DYNSmoothDestroyerAudioProcessor.h
src/DYN/TransFix/: CMakeLists.txt  DYNTransFixAudioProcessor.cpp  DYNTransFixAudioProcessor.h
src/DYN/VocalPin/: CMakeLists.txt  DYNVocalPinAudioProcessor.cpp  DYNVocalPinAudioProcessor.h
src/DYN/VocalPresenceComp/: CMakeLists.txt  DYNVocalPresenceCompAudioProcessor.cpp  DYNVocalPresenceCompAudioProcessor.h
src/EQ/AirGlass/: CMakeLists.txt  EQAirGlassAudioProcessor.cpp  EQAirGlassAudioProcessor.h
src/EQ/BusPaint/: CMakeLists.txt  EQBusPaintAudioProcessor.cpp  EQBusPaintAudioProcessor.h
src/EQ/DynBand/: CMakeLists.txt  EQDynBandAudioProcessor.cpp  EQDynBandAudioProcessor.h
src/EQ/DynamicTiltPro/: CMakeLists.txt  EQDynamicTiltProAudioProcessor.cpp  EQDynamicTiltProAudioProcessor.h
src/EQ/FormSet/: CMakeLists.txt  EQFormSetAudioProcessor.cpp  EQFormSetAudioProcessor.h
src/EQ/GuitarBodyEQ/: CMakeLists.txt  EQGuitarBodyEQAudioProcessor.cpp  EQGuitarBodyEQAudioProcessor.h
src/EQ/HarmonicEQ/: CMakeLists.txt  EQHarmonicEQAudioProcessor.cpp  EQHarmonicEQAudioProcessor.h
src/EQ/InfraSculpt/: CMakeLists.txt  EQInfraSculptAudioProcessor.cpp  EQInfraSculptAudioProcessor.h
src/EQ/LowBender/: CMakeLists.txt  EQLowBenderAudioProcessor.cpp  EQLowBenderAudioProcessor.h
src/EQ/MixNotchLab/: CMakeLists.txt  EQMixNotchLabAudioProcessor.cpp  EQMixNotchLabAudioProcessor.h
src/EQ/SculptEQ/: CMakeLists.txt  EQSculptEQAudioProcessor.cpp  EQSculptEQAudioProcessor.h
src/EQ/SideSlice/: CMakeLists.txt  EQSideSliceAudioProcessor.cpp  EQSideSliceAudioProcessor.h
src/EQ/TiltLine/: CMakeLists.txt  EQTiltLineAudioProcessor.cpp  EQTiltLineAudioProcessor.h
src/EQ/VoxDesignerEQ/: CMakeLists.txt  EQVoxDesignerEQAudioProcessor.cpp  EQVoxDesignerEQAudioProcessor.h
src/GLS/BusGlue/: CMakeLists.txt  GLSBusGlueAudioProcessor.cpp  GLSBusGlueAudioProcessor.h
src/GLS/ChannelPilot/: CMakeLists.txt  GLSChannelPilotAudioProcessor.cpp  GLSChannelPilotAudioProcessor.h
src/GLS/ChannelStripOne/: CMakeLists.txt  GLSChannelStripOneAudioProcessor.cpp  GLSChannelStripOneAudioProcessor.h
src/GLS/MixGuard/: CMakeLists.txt  GLSMixGuardAudioProcessor.cpp  GLSMixGuardAudioProcessor.h
src/GLS/MixHead/: CMakeLists.txt  GLSMixHeadAudioProcessor.cpp  GLSMixHeadAudioProcessor.h
src/GLS/MonoizePro/: CMakeLists.txt  GLSMonoizeProAudioProcessor.cpp  GLSMonoizeProAudioProcessor.h
src/GLS/ParallelPress/: CMakeLists.txt  GLSParallelPressAudioProcessor.cpp  GLSParallelPressAudioProcessor.h
src/GLS/StemBalancer/: CMakeLists.txt  GLSStemBalancerAudioProcessor.cpp  GLSStemBalancerAudioProcessor.h
src/GLS/SubCommand/: CMakeLists.txt  GLSSubCommandAudioProcessor.cpp  GLSSubCommandAudioProcessor.h
src/GLS/XOverBus/: CMakeLists.txt  GLSXOverBusAudioProcessor.cpp  GLSXOverBusAudioProcessor.h
src/GRD/BassMaul/: CMakeLists.txt  GRDBassMaulAudioProcessor.cpp  GRDBassMaulAudioProcessor.h
src/GRD/BitSpear/: CMakeLists.txt  GRDBitSpearAudioProcessor.cpp  GRDBitSpearAudioProcessor.h
src/GRD/BiteShaper/: CMakeLists.txt  GRDBiteShaperAudioProcessor.cpp  GRDBiteShaperAudioProcessor.h
src/GRD/FaultLineFuzz/: CMakeLists.txt  GRDFaultLineFuzzAudioProcessor.cpp  GRDFaultLineFuzzAudioProcessor.h
src/GRD/IronBus/: CMakeLists.txt  GRDIronBusAudioProcessor.cpp  GRDIronBusAudioProcessor.h
src/GRD/MixHeat/: CMakeLists.txt  GRDMixHeatAudioProcessor.cpp  GRDMixHeatAudioProcessor.h
src/GRD/OctaneClipper/: CMakeLists.txt  GROctaneClipperAudioProcessor.cpp  GROctaneClipperAudioProcessor.h
src/GRD/StereoGrind/: CMakeLists.txt  GRDStereoGrindAudioProcessor.cpp  GRDStereoGrindAudioProcessor.h
src/GRD/SubHarmForge/: CMakeLists.txt  GRDSubHarmForgeAudioProcessor.cpp  GRDSubHarmForgeAudioProcessor.h
src/GRD/TapeCrush/: CMakeLists.txt  GRDTapeCrushAudioProcessor.cpp  GRDTapeCrushAudioProcessor.h
src/GRD/TopFizz/: CMakeLists.txt  GRDTopFizzAudioProcessor.cpp  GRDTopFizzAudioProcessor.h
src/GRD/TransTubeX/: CMakeLists.txt  GRDTransTubeXAudioProcessor.cpp  (+1 more)
src/ui/: GoodluckLogoData.h  GoodluckLookAndFeel.h
tests/: README.md
(+81 files in other folders)
