cmake_minimum_required(VERSION 3.15)
project(GLS_SUITE VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_definitions(JUCE_VST3_CAN_REPLACE_VST2=0)

add_subdirectory(JUCE)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/ChannelPilot ${CMAKE_BINARY_DIR}/ChannelPilot)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/ChannelStripOne ${CMAKE_BINARY_DIR}/ChannelStripOne)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/BusGlue ${CMAKE_BINARY_DIR}/BusGlue)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/MixHead ${CMAKE_BINARY_DIR}/MixHead)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/MixGuard ${CMAKE_BINARY_DIR}/MixGuard)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/MonoizePro ${CMAKE_BINARY_DIR}/MonoizePro)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/ParallelPress ${CMAKE_BINARY_DIR}/ParallelPress)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/StemBalancer ${CMAKE_BINARY_DIR}/StemBalancer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/SubCommand ${CMAKE_BINARY_DIR}/SubCommand)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GLS/XOverBus ${CMAKE_BINARY_DIR}/XOverBus)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/AEV/AmbienceEvolverSuite ${CMAKE_BINARY_DIR}/AEVAmbienceEvolverSuite)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/AEV/GuerillaVerb ${CMAKE_BINARY_DIR}/AEVGuerillaVerb)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/AirGlass ${CMAKE_BINARY_DIR}/EQAirGlass)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/BusPaint ${CMAKE_BINARY_DIR}/EQBusPaint)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/DynBand ${CMAKE_BINARY_DIR}/EQDynBand)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/DynamicTiltPro ${CMAKE_BINARY_DIR}/EQDynamicTiltPro)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/FormSet ${CMAKE_BINARY_DIR}/EQFormSet)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/GuitarBodyEQ ${CMAKE_BINARY_DIR}/EQGuitarBodyEQ)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/HarmonicEQ ${CMAKE_BINARY_DIR}/EQHarmonicEQ)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/InfraSculpt ${CMAKE_BINARY_DIR}/EQInfraSculpt)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/LowBender ${CMAKE_BINARY_DIR}/EQLowBender)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/MixNotchLab ${CMAKE_BINARY_DIR}/EQMixNotchLab)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/SideSlice ${CMAKE_BINARY_DIR}/EQSideSlice)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/TiltLine ${CMAKE_BINARY_DIR}/EQTiltLine)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/SculptEQ ${CMAKE_BINARY_DIR}/EQSculptEQ)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/EQ/VoxDesignerEQ ${CMAKE_BINARY_DIR}/EQVoxDesignerEQ)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/BusLift ${CMAKE_BINARY_DIR}/DYNBusLift)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/ClipForge ${CMAKE_BINARY_DIR}/DYNClipForge)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/MultiBandMaster ${CMAKE_BINARY_DIR}/DYNMultiBandMaster)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/PunchGate ${CMAKE_BINARY_DIR}/DYNPunchGate)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/RMSRider ${CMAKE_BINARY_DIR}/DYNRMSRider)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/SideForge ${CMAKE_BINARY_DIR}/DYNSideForge)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/SmoothDestroyer ${CMAKE_BINARY_DIR}/DYNSmoothDestroyer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/TransFix ${CMAKE_BINARY_DIR}/DYNTransFix)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/VocalPin ${CMAKE_BINARY_DIR}/DYNVocalPin)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/DYN/VocalPresenceComp ${CMAKE_BINARY_DIR}/DYNVocalPresenceComp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/ChopperTrem ${CMAKE_BINARY_DIR}/ChopperTrem)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/ChorusIX ${CMAKE_BINARY_DIR}/ChorusIX)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/DualTap ${CMAKE_BINARY_DIR}/DualTap)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/FlangerJet ${CMAKE_BINARY_DIR}/FlangerJet)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/GhostEcho ${CMAKE_BINARY_DIR}/GhostEcho)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/PhaseGrid ${CMAKE_BINARY_DIR}/PhaseGrid)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/TapeStep ${CMAKE_BINARY_DIR}/TapeStep)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/TempoLFO ${CMAKE_BINARY_DIR}/TempoLFO)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/VibeMorph ${CMAKE_BINARY_DIR}/VibeMorph)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/MDL/WideTrack ${CMAKE_BINARY_DIR}/WideTrack)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/BassMaul ${CMAKE_BINARY_DIR}/BassMaul)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/BiteShaper ${CMAKE_BINARY_DIR}/BiteShaper)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/BitSpear ${CMAKE_BINARY_DIR}/BitSpear)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/OctaneClipper ${CMAKE_BINARY_DIR}/OctaneClipper)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/StereoGrind ${CMAKE_BINARY_DIR}/StereoGrind)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/IronBus ${CMAKE_BINARY_DIR}/IronBus)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/TapeCrush ${CMAKE_BINARY_DIR}/TapeCrush)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/SubHarmForge ${CMAKE_BINARY_DIR}/SubHarmForge)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/TubeLine ${CMAKE_BINARY_DIR}/TubeLine)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/WarmLift ${CMAKE_BINARY_DIR}/WarmLift)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/MixHeat ${CMAKE_BINARY_DIR}/MixHeat)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/TopFizz ${CMAKE_BINARY_DIR}/TopFizz)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/FaultLineFuzz ${CMAKE_BINARY_DIR}/FaultLineFuzz)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/TransTubeX ${CMAKE_BINARY_DIR}/TransTubeX)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/GRD/WavesmearDistortion ${CMAKE_BINARY_DIR}/WavesmearDistortion)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/PIT/ShiftPrime ${CMAKE_BINARY_DIR}/ShiftPrime)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/PIT/DoubleStrike ${CMAKE_BINARY_DIR}/DoubleStrike)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/PIT/ShimmerFall ${CMAKE_BINARY_DIR}/ShimmerFall)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/PIT/GrowlWarp ${CMAKE_BINARY_DIR}/GrowlWarp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/PIT/TimeStack ${CMAKE_BINARY_DIR}/TimeStack)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/PIT/MicroShift ${CMAKE_BINARY_DIR}/MicroShift)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/SignalTracer ${CMAKE_BINARY_DIR}/SignalTracer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/AutoAlignX ${CMAKE_BINARY_DIR}/AutoAlignX)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/BandRouter ${CMAKE_BINARY_DIR}/BandRouter)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/LatencyLab ${CMAKE_BINARY_DIR}/LatencyLab)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/MSMatrix ${CMAKE_BINARY_DIR}/MSMatrix)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/MeterGrid ${CMAKE_BINARY_DIR}/MeterGrid)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/NoiseGenLab ${CMAKE_BINARY_DIR}/NoiseGenLab)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src/UTL/PhaseOrb ${CMAKE_BINARY_DIR}/PhaseOrb)
